apps/media/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  labels:
    app.kubernetes.io/name: radarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: radarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: radarr
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: radarr
          image: ghcr.io/home-operations/radarr:6.2.1@sha256:0756fffa75b30219e3dbac8d027a5389f53cbb34ae83fa4b0976c1b0524c8eb1
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - NET_RAW
          ports:
            - name: http
              containerPort: 7878
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ping
              port: 7878
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 2
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /ping
              port: 7878
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 2
            failureThreshold: 5
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          volumeMounts:
            - name: radarr-pvc
              mountPath: /config
            - name: movies-nfs
              subPath: movies
              mountPath: /movies
              readOnly: false
            - name: tmp-volume
              mountPath: /tmp
      volumes:
        - name: radarr-pvc
          persistentVolumeClaim:
            claimName: radarr-pvc
        - name: movies-nfs
          nfs:
            server: 192.168.20.12
            path: /mnt/ssd1/media
        - name: tmp-volume
          emptyDir: {}
